# pixels_project

./: .env  .gitignore  Dockerfile  README v2.md  README.md  check.py  docker-compose-project.yml  docker-compose-pytest.yml  docker-compose.yml  env-example  env_prod-example  gitignore  main.py  pyproject.toml  requirements.txt  requirements_stud.txt  run.sh
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 16cee3a17066_banlist.py  5a516e9e9b05_refresh.py  7ce081068a83_init.py  d1f389de1cc3_init.py
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
postgres-data/base/1/: 2619
postgres-data/base/13481/: 13321
postgres-data/base/16384/: 1247  1249  1259  1259_vm  16385  16388  16390  16396  16405  16413  16414  16416  16418  16420  16428  16429  16436  16442  16454  16460  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  (+13 more)
postgres-data/global/: 1260  1262  2396  2671  2676  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
scripts/: create_reqtxt.cmd  docker_build_project_compose.cmd  docker_run_db_compose.cmd  docker_run_project_compose copy.cmd  runserver.cmd  sql_alebic_init.cmd  sql_upgrade.cmd  sql_versioning.cmd
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: comments.py  logout.py  profile.py  tools.py  users.py
src/routes/: auth.py  cloudinary.py  cloudinary_route.py  comments.py  posts.py  profile.py  static.py  tools.py  users.py
src/services/: auth.py  cloudinary.py  cloudinary_avatar.py  cloudinary_image.py  core.py  email.py  hcaptcha.py  posts.py  roles.py  tags.py
static/client/: app.html  confirm.html  index.html  main.html  posts.html  signup.html  signup_cap.html
static/client/css/: styles.css
static/client/js/: app.js  config.js  main.js  posts.js  signup.js  signup_cap.js
templates/: index.html
tests/: conftest.py  test_pytest_route_users.py  test_route_comments.py  test_route_posts.py  test_unit_repository_comments.py  test_unit_repository_logout.py  test_unit_repository_user.py
