[tool.poetry]
name = "pixels-project"
version = "0.1.0"
description = ""
authors = ["Cheburator <sashadanilenko06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
alembic = "^1.13.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.4.1"
libgravatar = "^1.0.4"
redis = "4.2"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.37.0"
pytest = "^7.4.3"
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
bcrypt = "4.0.1"
pillow = "10.1.0"
aiohttp = "^3.9.1"
qrcode = "^7.4.2"
aiofiles = "^23.2.1"
charset-normalizer = "^3.3.2"
requests = "2.31.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
